--- a/projeto/style.css
+++ b/projeto/style.css
@@ -8,12 +8,10 @@
     
 }
 body{
-   
    background: url(imagens/abala1.jpg) no-repeat;
    background-size: cover;
-   position: center center;
    background-attachment: fixed;
-
+   width: 100%;
 }
 
 header{
