--- a/projeto/style.css
+++ b/projeto/style.css
@@ -9,9 +9,10 @@
 }
 body{
    background: url(imagens/abala1.jpg) no-repeat top;
-   background-size: contain;
+   background-size: cover;
    background-attachment: fixed;
    max-width: 100%;
+   height: 88vh;
    
 }
 
