--- a/projeto/style.css
+++ b/projeto/style.css
@@ -8,7 +8,7 @@
     
 }
 body{
-   background: url(imagens/abala1.jpg) no-repeat top;
+   background: url(imagens/WhatsApp\ Image\ 2023-11-03\ at\ 22.34.48.jpeg) no-repeat top;
    background-size: cover;
    background-attachment: fixed;
    max-width: 100%;
@@ -66,7 +66,7 @@ header > p{
 
 .designer > a li{
     font-family: 'Open Sans', sans-serif;
-    background-color: #ffffffbd;
+    background-color: #fffcfcb6;
     width: 300px;
     border-radius: 10px 30px;
     padding: 15px 10px;
